# IntroSYCLtutorial

./: .gitignore  README.md  contributors.md
01-introduction/: 01-introtosycl.ipynb  README.md  devcloud.ipynb  devcloud.md  polaris.md  sycl-tutorial-extra.md  sycl-tutorial-extras.ipynb
01-introduction/examples/: 00-buffer-accessor.ipynb  00-devices-platforms.ipynb  00-hello.ipynb  01-USM-example.ipynb  01-devices-platforms.ipynb  01-vectoradd-USM.ipynb  01-vectoradd.ipynb  02-hello.ipynb  03-buffer-accessor.ipynb  03-dot-product-wrong.ipynb  03v1-dot-product.ipynb  04-matrix-mult.ipynb  05-vectoradd.ipynb  Notes.ipynb  README.md
02-electrondensity/: 01-Intro-overview.ipynb  02-compile-execute.ipynb  03-kernels-1d.ipynb  03-kernels-3d.ipynb  03-kernels-cpu.ipynb  README.md  benchmarks.md  cleandir.sh
02-electrondensity/src/: Atom.cpp  Atom.hpp  CMakeLists.txt  Field.cpp  Field.hpp  Rvector.cpp  Rvector.hpp  Timer.cpp  Timer.hpp  WaveFunction.cpp  WaveFunction.hpp  evaldensobj.xx  functionold.xx  main.cpp  version.hpp.in
02-electrondensity/test/: dimer_HCOOH.wfx
03-marchingCubes/: MarchingCubes.ipynb  README.md
03-marchingCubes/src/: marchingCubes.cpp  marchingCubesKernels.cpp
04-NBody/: NBodyinSYCL.ipynb
Optional-Modern-C++/: CMakeLists.txt  README.md
Optional-Modern-C++/modern-cpp/: CMakeLists.txt  auto-mva.cpp  auto-mva2.cpp  auto-with-stl.cpp  const-constexpr.cpp  lambda-no-parameters.cpp  lambda-with-closures-byref-all.cpp  lambda-with-closures-byref.cpp  lambda-with-closures-byval-all.cpp  lambda-with-closures-byval.cpp  lambda-with-parameters.cpp  point-struct.h  point.h  random-hist.cpp  rangev3-aoc2022day1.cpp  rangev3-aoc2022day1.hpp  rangev3-aoc2022day1_main.cpp  rangev3-aoc2022day1_test.cpp  spdlog-mva.cpp  std-pair.cpp  std-tuple.cpp  vector-top10-mva.cpp
Optional-sssp/: 01-intro-sssp.ipynb  02-compile-run.ipynb  CMakeLists.txt  README.md  delta-stepping.cpp  devcloud.md  polaris.md
Optional-sssp/sssp/: CMakeLists.txt  README.md  delta
